# CorbeauSplatwinnvidia

./: .gitignore  CHANGELOG.md  README.md  audit-report-v1.md  audit-report.md  config.example.json  main.py  manifest.md  newgui.md  pyproject.toml  requirements-dev.txt  requirements.txt  run.bat  run.command
.github/workflows/: ci.yml
app/: upscayl_manager.py  upscayl_models.py
app/cli/: __init__.py  commands.py  launcher.py  parser.py
app/core/: base_engine.py  brush_engine.py  engine.py  export_engine.py  extractor_360_engine.py  four_dgs_engine.py  i18n.py  params.py  ply_cleaner.py  ply_utils.py  sharp_engine.py  superplat_engine.py  system.py  upscale_engine.py
app/gui/: base_worker.py  main_window.py  managers.py  styles.py  workers.py
app/gui/tabs/: brush_tab.py  cleaner_tab.py  config_tab.py  export_tab.py  extractor_360_tab.py  four_dgs_tab.py  logs_tab.py  params_tab.py  superplat_tab.py  upscale_tab.py
app/gui/widgets/: dialog_utils.py  drop_line_edit.py  upscale_widgets.py  wheel_guard.py
app/scripts/: __init__.py  checksum_verifier.py  checksums.json  setup_dependencies.py
app/scripts/installers/: __init__.py  base.py  brush.py  extractor_360.py  mapping.py  sharp.py  supersplat.py  (+2 more)
assets/locales/: ar.json  de.json  en.json  es.json  fr.json  it.json  ja.json  ru.json  zh.json
tests/: test_base_engine.py  test_brush_engine.py  test_cli.py  test_colmap_engine.py  test_export_engine.py  test_four_dgs_engine.py  test_managers.py  test_ply_cleaner.py  test_setup_dependencies.py  test_sharp_engine.py  test_upscayl_manager.py  test_workers.py
